welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:6: error: ';' expected but ')' found.
	if(b%10)==(c%10)){
                        ^