welcome.lessons.welcome.bat.bool2.LastDigit2.scala.code
def count(a:Int, b:Int, c:Int):Int ={
	var x = 0
	if((a%10)==(b%10)){
		x = x + 11
	}
	if(b%10)==(c%10)){
		x = x + 1
	}
	if(a%10)==(c%10)){
		x = x + 1
	}
	return x
}

def lastDigit(a:Int, b:Int, c:Int):Boolean = {
	if((count(a,b,c))>1){
		return true
	}else{
		return false
	}
}
